# librux

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  cachegrind.out  echo-latency-1000-echo.txt  rustfmt.toml  sync_mux_echo  sync_mux_echo_snapshot
benches/: buf.rs  burst_libuv_strace.csv  echo-latency.rpc-perf.toml  echo-syscalls.tsv  echo.rpc-perf.toml  futures-mio-syscalls.tsv  heap.pprof  http_test.vegeta  payload.json  rpc_perf_burst.toml  rpc_perf_latency.toml  rpc_perf_profile.toml  rpc_perf_throughput.toml  sync_mux_echo-syscalls.tsv  tokio-syscalls.tsv
examples/: buf.rs  echo.rs  handler.rs  handler_2.rs  smeagol.rs  sync_mux_echo.rs
scripts/: create-flamegraph.sh
src/: constants.rs  error.rs  handler.rs  lib.rs  macros.rs  mux.rs  protocol.rs  system.rs
src/buf/: buffer.rs  buffered.rs  mod.rs  tests.rs
src/controller/: mod.rs  sync.rs
src/daemon/: builder.rs  mod.rs
src/epoll/: mod.rs
src/handler/: echo.rs  factory.rs  mod.rs  mux.rs  sync.rs
src/logging/: mod.rs
src/mux/: action.rs  event.rs  factory.rs  handler.rs  macros.rs  mod.rs
src/poll/: mod.rs
src/prop/: mod.rs  mux.rs  server.rs  signals.rs  system.rs
src/server/: mod.rs  mux.rs  simplemux.rs
