[package]
name = "rux"
version = "0.1.0"
authors = ["Ernest Romero <ernest@unstable.build>"]
description = "Experimental Linux I/O library"
license-file = "LICENSE"
documentation = "http://rux.unstable.build/rustdoc"
homepage = "http://rux.unstable.build"
repository = "https://github.com/ernestrc/rux"

[lib]
name = "rux"
path = "src/lib.rs"

[dependencies]
error-chain = "0.5.0"
nix = { version = "0.6.0", features = ["signalfd"] }
log = "0.3.6"
num_cpus = "1.0.0"
lazy_static = "0.2.1"
slab = "0.2.0"
time = "0.1.35"
pad = "0.1.4"

# example
httparse = "*"
