[package]
name = "rux"
version = "0.1.0"
authors = ["Ernest Romero <ernest@unstable.build>"]
description = "Experimental Linux I/O library"
license-file = "LICENSE"
documentation = "http://rux.unstable.build/rustdoc"
homepage = "http://rux.unstable.build"
repository = "https://github.com/ernestrc/rux"

[lib]
name = "rux"
path = "src/lib.rs"

[[bench]]
name = "buf"
path = "benches/buf.rs"

[dependencies]
libc = "*"
nix = { version = "0.7.0", features = ["signalfd"] }
num_cpus = "1.1.0"
lazy_static = "0.2.1"
error-chain = "*"
time = "*"
pad = "*"
# TODO provide own macros
env_logger = "*"
log = "0.3.6"
slab = "0.3.0"

# [profile.release]
# debug = true
# opt-level = 3
# lto = false
